# rel4_kernel

./: .gitignore  Cargo.toml  Cargo.toml.virtual  README.md  build.py  build.rs  generator.py  makefile  push_remote.sh  push_remote2.sh  rel4kernel.code-workspace  root-task-demo.code-workspace  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: push-to-discrete-repo.yaml  test.yaml
scripts/: draw.py  net_test.py  net_test.sh
src/: aarch64.rs  compatibility.rs  config.rs  deps.rs  exception.rs  ffi.rs  lang_items.rs  lib.rs  main.rs  riscv.rs  structures.rs  utils.rs
src/.cargo/: config
src/arch/: linker.ld.in  mod.rs
src/arch/aarch64/: boot.rs  c_traps.rs  consts.rs  exception.rs  ffi.rs  fpu.S  fpu.rs  head.S  instruction.rs  linker.ld.in  mod.rs  pg.rs  platform.rs  smp.rs  traps.S  vcpu.rs
src/arch/aarch64/arm_gic/: mod.rs
src/arch/aarch64/arm_gic/gic_v2/: consts.rs  gic_v2.rs  mod.rs
src/arch/riscv/: boot.rs  c_traps.rs  exception.rs  fpu.rs  head.S  linker.lds_pp  mod.rs  platform.rs  smp.rs  traps.S
src/arm_gic/: mod.rs
src/arm_gic/gic_v2/: consts.rs  mod.rs
src/arm_gic/gic_v3/: mod.rs
src/async_runtime/: async_syscall_handler.rs  coroutine.rs  mod.rs  new_buffer.rs  utils.rs
src/boot/: fpu.rs  gic_v2.rs  interface.rs  mm.rs  mod.rs  root_server.rs  untyped.rs  user_access.rs  utils.rs
src/common/: message_info.rs  sbi.rs
src/cspace/: deps.rs
src/interfaces_impl/: cspace.rs  mod.rs
src/interrupt/: handler.rs  mod.rs  net.rs  plic.rs
src/kernel/: boot.rs  c_traps.rs  fastpath.rs  fastpath_restore.S  fault.rs  mod.rs
src/object/: mod.rs
src/platform/: mod.rs  qemu-arm-virt.yml  spike.yml
src/smp/: ipi.rs  lock.rs  mod.rs
src/syscall/: mod.rs  syscall_reply.rs  utils.rs
src/syscall/invocation/: invoke_cnode.rs  invoke_irq.rs  invoke_mmu_op.rs  invoke_sched.rs  invoke_tcb.rs  invoke_untyped.rs  mod.rs
src/syscall/invocation/arch/: aarch64.rs  riscv64.rs
src/syscall/invocation/decode/: decode_cnode_invocation.rs  decode_domain_invocation.rs  decode_irq_invocation.rs  decode_mmu_invocation.rs  decode_sched_invocation.rs  decode_tcb_invocation.rs  decode_untyped_invocation.rs  mod.rs
src/syscall/invocation/decode/arch/: aarch64.rs  riscv64.rs
src/syscall/invocation/decode/decode_mmu_invocation/: decode_aarch_mmu_invocation.rs  decode_riscv_mmu_invocation.rs  mod.rs
src/task_manager/: scheduler.rs  tcb.rs
src/task_manager/ipc/: endpoint.rs  notification.rs
src/uintc/: config.rs  mod.rs
src/uintr/: uipi.rs
