[package]
name = "rel4_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustlib"
path = "src/lib.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
bit_field = "0.10"
log = "0.4"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "a35c6e6" }
axi-ethernet = { git = "https://github.com/zflcs/axi-ethernet.git" }
axi-dma = { git = "https://github.com/reL4team2/axi-dma.git" }

[dependencies.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp.git"
rev = "b57e2f9e70e82a13f31d5ea17e55232c11cc2b2d"
default-features = false
features = [
    "alloc", "log",   # no std
    "medium-ethernet",
    "proto-ipv4",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp",
]

[features]
default = ["ENABLE_SMP", "ENABLE_UINTC"]
ENABLE_SMP = []
ENABLE_UINTC = []
board_qemu = []
board_lrv = []
