[package]
name = "rel4_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustlib"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "rel4_kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
aarch64-cpu = "9.4.0"
log = "0.4"
tock-registers = "0.8"
cfg-if = "1.0"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
sel4_common = { git = "https://github.com/reL4team2/sel4_common.git", branch = "master" }
sel4_cspace = { git = "https://github.com/reL4team2/sel4_cspace.git", branch = "master" }
sel4_vspace = { git = "https://github.com/reL4team2/sel4_vspace.git", branch = "master" }
sel4_task = { git = "https://github.com/reL4team2/sel4_task.git", branch = "master" }
sel4_ipc = { git = "https://github.com/reL4team2/sel4_ipc.git", branch = "master" }
driver-collect = { git = "https://github.com/reL4team2/driver-collect.git", branch = "master" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rel4_config = { path = "../rel4_config" }

[features]
ENABLE_SMP = ["sel4_common/ENABLE_SMP", "sel4_task/ENABLE_SMP", "sel4_vspace/ENABLE_SMP"]
KERNEL_MCS = ["sel4_common/KERNEL_MCS", "sel4_task/KERNEL_MCS", "sel4_cspace/KERNEL_MCS", "sel4_ipc/KERNEL_MCS"]
ENABLE_SMC = ["sel4_common/ENABLE_SMC", "sel4_cspace/ENABLE_SMC"]
BUILD_BINARY = ["sel4_common/BUILD_BINARY"]
ENABLE_ARM_PCNT = []
ENABLE_ARM_PTMR = []
HAVE_FPU = ["sel4_common/HAVE_FPU"]
RISCV_EXT_D = ["sel4_common/RISCV_EXT_D"]
RISCV_EXT_F = ["sel4_common/RISCV_EXT_F"]