[package]
name = "rel4_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustlib"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "rel4_kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
aarch64-cpu = "9.4.0"
log = "0.4"
tock-registers = "0.8"
cfg-if = "1.0"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
sel4_common = { git = "https://github.com/reL4team2/sel4_common.git", branch = "master" }
sel4_cspace = { git = "https://github.com/reL4team2/sel4_cspace.git", branch = "master" }
sel4_vspace = { git = "https://github.com/reL4team2/sel4_vspace.git", branch = "master" }
sel4_task = { git = "https://github.com/reL4team2/sel4_task.git", branch = "master" }
sel4_ipc = { git = "https://github.com/reL4team2/sel4_ipc.git", branch = "master" }
driver-collect = { git = "https://github.com/reL4team2/driver-collect.git", branch = "master" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rel4_config = { path = "../rel4_config" }

[features]
enable_smp = ["sel4_common/enable_smp", "sel4_task/enable_smp", "sel4_vspace/enable_smp"]
kernel_mcs = ["sel4_common/kernel_mcs", "sel4_task/kernel_mcs", "sel4_cspace/kernel_mcs", "sel4_ipc/kernel_mcs"]
enable_smc = ["sel4_common/enable_smc", "sel4_cspace/enable_smc"]
build_binary = ["sel4_common/build_binary"]
enable_arm_pcnt = []
enable_arm_ptmr = []
have_fpu = ["sel4_common/have_fpu"]
riscv_ext_d = ["sel4_common/riscv_ext_d"]
riscv_ext_f = ["sel4_common/riscv_ext_f"]
